<resources>
    <string name="app_name">Assignment</string>
    <string name="welcome">Welcome to the Blackpool illuminations!</string>
    <string name="directions_title">Visible Points</string>
    <string name="directions_text">The image below shows some of the better visual points at which you can see the lights, although the lights can be seen throughout a big stretch of the Blackpool beach as they go down the entire road.</string>
    <string name="about_button">About</string>
    <string name="quiz_button">Quiz</string>
    <string name="about_title">About the illuminations</string>
    <string name="directions_button">Recommended Spots</string>
    <string name="about_text">The Blackpool illuminations where first switched on in 1879 and origanlly consisted of only 8 carbon arc lamps. The first modern day expreience was in 1912 when they switched on a promenade of 10000 lights to celebrate the royal families first visit. </string>
    <string name="about_text2">Now the illuminations are described as the best free light show on earth and tens of thousands of people attend to see them switched on each year. Its become somewhat of a festavil with hosts like Topgear, Peter Kay and Dame Barbara Windsor switching the lights on. Theres usually a concert on afterwards with all sorts of different acts. </string>
    <string name="quiz_title">Quiz</string>
    <string name="quiz_text">For your chance to win 2 tickets to the main stage event answer the following questions correctly.</string>
    <string name="question1">When was the first time that the lights where switched on?</string>
    <string name="answer1.1">1908</string>
    <string name="answer1.2">1895</string>
    <string name="answer1.3">1886</string>
    <string name="answer1.4">1879</string>
    <string name="next_button">Next Question</string>
    <string name="question2">Who, of the following names, have switched the lights on before?</string>
    <string name="answer2.1">Jason Stathem</string>
    <string name="answer2.2">Peter Kay</string>
    <string name="answer2.3">Mr.Meeseeks</string>
    <string name="answer2.4">Chris Evans</string>
    <string name="question3">How much does it cost to see the lights?</string>
    <string name="answer3.1">Fiver</string>
    <string name="answer3.2">Tenner</string>
    <string name="answer3.3">Nothing, its free</string>
    <string name="answer3.4">A Pound</string>
    <string name="submit_button">Submit</string>
    <string name="welcome_title">Welcome to the Illuminations</string>
    <string name="home_text">Welcome to the official app for directions and information about the Blackpool illuminations event. The switch on date for the lights this year is the 1st of september at 9:25 pm, the lights will be on until the 5th of november.</string>
    <string name="locations_button">Directions</string>
    <string name="locations_title">Directions</string>
    <string name="location_text">Please enter a location below.</string>
    <string name="location_text2">Blackpool Tower \n Pleasure Beach \n Sandcastles \n North Pier \n Central Pier \n South pier</string>
    <string name="home_button">Home</string>
    <string name="direction_hint">Enter a location from below, and use the map for directions.</string>
</resources>
