<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.david.assignment.LocationActivity"
    android:background="@color/backgroundBlack">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location_title"
        android:text="@string/locations_title"
        android:textColor="@color/titleColour"
        android:textSize="@dimen/title_size"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_map"
        android:layout_below="@+id/location_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/buttonBlue"
        android:textColor="@color/textWhite"
        android:hint="@string/direction_hint"
        android:textColorHint="@color/textWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location_text2"
        android:text="@string/location_text2"
        android:textColor="@color/textWhite"
        android:textSize="@dimen/location_size"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_button"
        android:text="@string/about_button"
        android:textSize="@dimen/button_size"
        android:background="@color/buttonBlue"
        android:textColor="@color/textWhite"
        android:layout_alignTop="@+id/home_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_text"
        android:textSize="@dimen/location_text"
        android:id="@+id/location_text"
        android:layout_below="@+id/location_title"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textWhite"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quiz_button"
        android:text="@string/directions_button"
        android:textSize="@dimen/button_size"
        android:background="@color/buttonBlue"
        android:textColor="@color/textWhite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_button"
        android:text="@string/home_button"
        android:textSize="@dimen/button_size"
        android:background="@color/buttonBlue"
        android:textColor="@color/textWhite"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locate_button"
        android:text="Locate"
        android:textSize="@dimen/button_size"
        android:background="@color/buttonBlue"
        android:textColor="@color/textWhite"
        android:layout_above="@+id/location_text2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp" />

</RelativeLayout>
