<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_directions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.david.assignment.MainActivity"
    android:background="@color/backgroundBlack">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/directions_title"
        android:text="@string/directions_title"
        android:textColor="@color/titleColour"
        android:textSize="@dimen/title_size"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/directions_text"
        android:text="@string/directions_text"
        android:textSize="@dimen/text_size"
        android:textColor="@color/textWhite"
        android:layout_below="@+id/directions_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_button"
        android:text="@string/about_button"
        android:textSize="@dimen/button_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/buttonBlue"
        android:textColor="@color/textWhite"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quiz_button"
        android:text="@string/quiz_button"
        android:textSize="@dimen/button_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/buttonBlue"
        android:textColor="@color/textWhite"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/map_height"
        android:id="@+id/map_image"
        android:src="@drawable/mapimage1"
        android:layout_below="@+id/directions_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/about_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locations_button"
        android:text="@string/locations_button"
        android:textSize="@dimen/button_size"
        android:background="@color/buttonBlue"
        android:textColor="@color/textWhite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
