<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.david.assignment.QuizActivity"
    android:background="@color/backgroundBlack">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quiz_title"
        android:text="@string/quiz_title"
        android:textColor="@color/titleColour"
        android:textSize="@dimen/title_size"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quiz_text"
        android:text="@string/quiz_text"
        android:textSize="@dimen/text_size"
        android:textColor="@color/textWhite"
        android:gravity="center"
        android:layout_below="@+id/quiz_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_group"
        android:layout_marginTop="59dp"
        android:layout_alignTop="@+id/question_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_1"
            android:text="@string/answer1.1"
            android:textSize="@dimen/text_size"
            android:layout_alignTop="@+id/question_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/textWhite"
            android:buttonTint="@color/textWhite"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_3"
            android:text="@string/answer1.3"
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/button_2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"
            android:textColor="@color/textWhite"
            android:buttonTint="@color/textWhite"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_2"
            android:text="@string/answer1.2"
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/button_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"
            android:textColor="@color/textWhite"
            android:buttonTint="@color/textWhite"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_4"
            android:text="@string/answer1.4"
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/button_3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"
            android:textColor="@color/textWhite"
            android:buttonTint="@color/textWhite"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_button"
        android:text="@string/next_button"
        android:background="@color/buttonBlue"
        android:textColor="@color/textWhite"
        android:textSize="@dimen/button_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/directions_button"
        android:text="@string/locations_button"
        android:textSize="@dimen/button_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/buttonBlue"
        android:textColor="@color/textWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question_1"
        android:text="@string/question1"
        android:textSize="@dimen/text_size"
        android:textColor="@color/textWhite"
        android:layout_below="@+id/quiz_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

</RelativeLayout>
